tests/expectations/compiler/type_inference/unsuffixed_literals_fail.out
Error [ETYC0372004]: Could not determine the type of `1`
    --> compiler-test:3:18
     |
   3 |         let a0 = 1;
     |                  ^
     |
     = Consider using explicit type annotations.
Error [ETYC0372139]: Expected type `bool` but an unsuffixed numeral was found.
    --> compiler-test:4:18
     |
   4 |         let a1 = 1 && true;
     |                  ^
Error [ETYC0372139]: Expected type `bool` but an unsuffixed numeral was found.
    --> compiler-test:5:26
     |
   5 |         let a2 = true || 1;
     |                          ^
Error [ETYC0372139]: Expected type `bool` but an unsuffixed numeral was found.
    --> compiler-test:6:18
     |
   6 |         let a3 = 1.nand(1);
     |                  ^
Error [ETYC0372139]: Expected type `bool` but an unsuffixed numeral was found.
    --> compiler-test:6:25
     |
   6 |         let a3 = 1.nand(1);
     |                         ^
Error [ETYC0372139]: Expected type `bool` but an unsuffixed numeral was found.
    --> compiler-test:7:18
     |
   7 |         let a4 = 1.nor(1).nor(1);
     |                  ^
Error [ETYC0372139]: Expected type `bool` but an unsuffixed numeral was found.
    --> compiler-test:7:24
     |
   7 |         let a4 = 1.nor(1).nor(1);
     |                        ^
Error [ETYC0372139]: Expected type `bool` but an unsuffixed numeral was found.
    --> compiler-test:7:31
     |
   7 |         let a4 = 1.nor(1).nor(1);
     |                               ^
Error [ETYC0372004]: Could not determine the type of `1`
    --> compiler-test:9:18
     |
   9 |         let b0 = 1 & true;
     |                  ^
     |
     = Consider using explicit type annotations.
Error [ETYC0372004]: Could not determine the type of `1`
    --> compiler-test:10:25
     |
  10 |         let b1 = true | 1;
     |                         ^
     |
     = Consider using explicit type annotations.
Error [ETYC0372004]: Could not determine the type of `1`
    --> compiler-test:11:18
     |
  11 |         let b2 = 1 ^ 1;
     |                  ^
     |
     = Consider using explicit type annotations.
Error [ETYC0372004]: Could not determine the type of `1`
    --> compiler-test:11:22
     |
  11 |         let b2 = 1 ^ 1;
     |                      ^
     |
     = Consider using explicit type annotations.
Error [ETYC0372004]: Could not determine the type of `1`
    --> compiler-test:13:18
     |
  13 |         let c0 = 1 + true;
     |                  ^
     |
     = Consider using explicit type annotations.
Error [ETYC0372117]: Expected a field, group, scalar, or integer but type `bool` was found.
    --> compiler-test:13:22
     |
  13 |         let c0 = 1 + true;
     |                      ^^^^
Error [ETYC0372004]: Could not determine the type of `1`
    --> compiler-test:14:18
     |
  14 |         let c1 = 1 - 1;
     |                  ^
     |
     = Consider using explicit type annotations.
Error [ETYC0372004]: Could not determine the type of `1`
    --> compiler-test:14:22
     |
  14 |         let c1 = 1 - 1;
     |                      ^
     |
     = Consider using explicit type annotations.
Error [ETYC0372004]: Could not determine the type of `1`
    --> compiler-test:15:18
     |
  15 |         let c3 = 1 * 1;
     |                  ^
     |
     = Consider using explicit type annotations.
Error [ETYC0372004]: Could not determine the type of `1`
    --> compiler-test:15:22
     |
  15 |         let c3 = 1 * 1;
     |                      ^
     |
     = Consider using explicit type annotations.
Error [ETYC0372004]: Could not determine the type of `1`
    --> compiler-test:16:18
     |
  16 |         let c4 = 1 % 1;
     |                  ^
     |
     = Consider using explicit type annotations.
Error [ETYC0372004]: Could not determine the type of `1`
    --> compiler-test:16:22
     |
  16 |         let c4 = 1 % 1;
     |                      ^
     |
     = Consider using explicit type annotations.
Error [ETYC0372004]: Could not determine the type of `1`
    --> compiler-test:17:18
     |
  17 |         let c5 = 1.rem_wrapped(1);
     |                  ^
     |
     = Consider using explicit type annotations.
Error [ETYC0372004]: Could not determine the type of `1`
    --> compiler-test:17:32
     |
  17 |         let c5 = 1.rem_wrapped(1);
     |                                ^
     |
     = Consider using explicit type annotations.
Error [ETYC0372004]: Could not determine the type of `1`
    --> compiler-test:18:18
     |
  18 |         let c6 = 1.mod(1);
     |                  ^
     |
     = Consider using explicit type annotations.
Error [ETYC0372004]: Could not determine the type of `1`
    --> compiler-test:18:24
     |
  18 |         let c6 = 1.mod(1);
     |                        ^
     |
     = Consider using explicit type annotations.
Error [ETYC0372004]: Could not determine the type of `1`
    --> compiler-test:19:18
     |
  19 |         let c7 = 1.pow(1);
     |                  ^
     |
     = Consider using explicit type annotations.
Error [ETYC0372004]: Could not determine the type of `1`
    --> compiler-test:19:24
     |
  19 |         let c7 = 1.pow(1);
     |                        ^
     |
     = Consider using explicit type annotations.
Error [ETYC0372004]: Could not determine the type of `1`
    --> compiler-test:21:18
     |
  21 |         let d0 = 1 == 1;
     |                  ^
     |
     = Consider using explicit type annotations.
Error [ETYC0372004]: Could not determine the type of `1`
    --> compiler-test:21:23
     |
  21 |         let d0 = 1 == 1;
     |                       ^
     |
     = Consider using explicit type annotations.
Error [ETYC0372004]: Could not determine the type of `1`
    --> compiler-test:22:18
     |
  22 |         let d1 = 1 != 1;
     |                  ^
     |
     = Consider using explicit type annotations.
Error [ETYC0372004]: Could not determine the type of `1`
    --> compiler-test:22:23
     |
  22 |         let d1 = 1 != 1;
     |                       ^
     |
     = Consider using explicit type annotations.
Error [ETYC0372004]: Could not determine the type of `1`
    --> compiler-test:23:18
     |
  23 |         let d2 = 1 > 1;
     |                  ^
     |
     = Consider using explicit type annotations.
Error [ETYC0372004]: Could not determine the type of `1`
    --> compiler-test:23:22
     |
  23 |         let d2 = 1 > 1;
     |                      ^
     |
     = Consider using explicit type annotations.
Error [ETYC0372004]: Could not determine the type of `1`
    --> compiler-test:24:18
     |
  24 |         let d3 = 1 < 1;
     |                  ^
     |
     = Consider using explicit type annotations.
Error [ETYC0372004]: Could not determine the type of `1`
    --> compiler-test:24:22
     |
  24 |         let d3 = 1 < 1;
     |                      ^
     |
     = Consider using explicit type annotations.
Error [ETYC0372004]: Could not determine the type of `1`
    --> compiler-test:25:18
     |
  25 |         let d4 = 1 >= 1;
     |                  ^
     |
     = Consider using explicit type annotations.
Error [ETYC0372004]: Could not determine the type of `1`
    --> compiler-test:25:23
     |
  25 |         let d4 = 1 >= 1;
     |                       ^
     |
     = Consider using explicit type annotations.
Error [ETYC0372004]: Could not determine the type of `1`
    --> compiler-test:26:18
     |
  26 |         let d5 = 1 <= 1;
     |                  ^
     |
     = Consider using explicit type annotations.
Error [ETYC0372004]: Could not determine the type of `1`
    --> compiler-test:26:23
     |
  26 |         let d5 = 1 <= 1;
     |                       ^
     |
     = Consider using explicit type annotations.
Error [ETYC0372004]: Could not determine the type of `1`
    --> compiler-test:28:18
     |
  28 |         let e0 = 1.add_wrapped(1);
     |                  ^
     |
     = Consider using explicit type annotations.
Error [ETYC0372004]: Could not determine the type of `1`
    --> compiler-test:28:32
     |
  28 |         let e0 = 1.add_wrapped(1);
     |                                ^
     |
     = Consider using explicit type annotations.
Error [ETYC0372004]: Could not determine the type of `1`
    --> compiler-test:29:18
     |
  29 |         let e1 = 1.sub_wrapped(1);
     |                  ^
     |
     = Consider using explicit type annotations.
Error [ETYC0372004]: Could not determine the type of `1`
    --> compiler-test:29:32
     |
  29 |         let e1 = 1.sub_wrapped(1);
     |                                ^
     |
     = Consider using explicit type annotations.
Error [ETYC0372004]: Could not determine the type of `1`
    --> compiler-test:30:18
     |
  30 |         let e2 = 1.div_wrapped(1);
     |                  ^
     |
     = Consider using explicit type annotations.
Error [ETYC0372004]: Could not determine the type of `1`
    --> compiler-test:30:32
     |
  30 |         let e2 = 1.div_wrapped(1);
     |                                ^
     |
     = Consider using explicit type annotations.
Error [ETYC0372004]: Could not determine the type of `1`
    --> compiler-test:31:18
     |
  31 |         let e3 = 1.mul_wrapped(1);
     |                  ^
     |
     = Consider using explicit type annotations.
Error [ETYC0372004]: Could not determine the type of `1`
    --> compiler-test:31:32
     |
  31 |         let e3 = 1.mul_wrapped(1);
     |                                ^
     |
     = Consider using explicit type annotations.
Error [ETYC0372004]: Could not determine the type of `1`
    --> compiler-test:33:18
     |
  33 |         let f0 = 1.shl(1);
     |                  ^
     |
     = Consider using explicit type annotations.
Error [ETYC0372004]: Could not determine the type of `1`
    --> compiler-test:33:24
     |
  33 |         let f0 = 1.shl(1);
     |                        ^
     |
     = Consider using explicit type annotations.
Error [ETYC0372004]: Could not determine the type of `1`
    --> compiler-test:34:18
     |
  34 |         let f1 = 1.shl_wrapped(1);
     |                  ^
     |
     = Consider using explicit type annotations.
Error [ETYC0372004]: Could not determine the type of `1`
    --> compiler-test:34:32
     |
  34 |         let f1 = 1.shl_wrapped(1);
     |                                ^
     |
     = Consider using explicit type annotations.
Error [ETYC0372004]: Could not determine the type of `1`
    --> compiler-test:35:18
     |
  35 |         let f2 = 1.shr(1);
     |                  ^
     |
     = Consider using explicit type annotations.
Error [ETYC0372004]: Could not determine the type of `1`
    --> compiler-test:35:24
     |
  35 |         let f2 = 1.shr(1);
     |                        ^
     |
     = Consider using explicit type annotations.
Error [ETYC0372004]: Could not determine the type of `1`
    --> compiler-test:36:18
     |
  36 |         let f3 = 1.shr_wrapped(1);
     |                  ^
     |
     = Consider using explicit type annotations.
Error [ETYC0372004]: Could not determine the type of `1`
    --> compiler-test:36:32
     |
  36 |         let f3 = 1.shr_wrapped(1);
     |                                ^
     |
     = Consider using explicit type annotations.
Error [ETYC0372004]: Could not determine the type of `1`
    --> compiler-test:37:18
     |
  37 |         let f4 = 1.pow_wrapped(1);
     |                  ^
     |
     = Consider using explicit type annotations.
Error [ETYC0372004]: Could not determine the type of `1`
    --> compiler-test:37:32
     |
  37 |         let f4 = 1.pow_wrapped(1);
     |                                ^
     |
     = Consider using explicit type annotations.
Error [ETYC0372004]: Could not determine the type of `1`
    --> compiler-test:41:19
     |
  41 |         let b0 = -1.abs();
     |                   ^
     |
     = Consider using explicit type annotations.
Error [ETYC0372004]: Could not determine the type of `1`
    --> compiler-test:42:19
     |
  42 |         let b1 = -1.abs_wrapped();
     |                   ^
     |
     = Consider using explicit type annotations.
Error [ETYC0372004]: Could not determine the type of `0`
    --> compiler-test:43:18
     |
  43 |         let b2 = 0.double();
     |                  ^
     |
     = Consider using explicit type annotations.
Error [ETYC0372004]: Could not determine the type of `2`
    --> compiler-test:45:20
     |
  45 |         let b4  = -2;
     |                    ^
     |
     = Consider using explicit type annotations.
Error [ETYC0372004]: Could not determine the type of `2`
    --> compiler-test:46:20
     |
  46 |         let b5  = !2;
     |                    ^
     |
     = Consider using explicit type annotations.
